--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Second Github Repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>I Love You</h1>
-    <h2>I hate you also</h2>
-    <h2>I hate you also</h2>
-    <h2>I hate you also</h2>
-    <h2>I hate you also</h2>
+    <h1>I am coding</h1>
+    <h2>Fuska khaba</h2>
+    <p>Hei mama!!!</p>
+    <p>Jaiba</p>
+    <p>Bristy, bhara ektu baraya dite hoibo</p>
+    <p>Okay mama</p>
 </body>
 </html>
