--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <p>Jaiba</p>
     <p>Bristy, bhara ektu baraya dite hoibo</p>
     <p>Okay mama</p>
+    <img src="sakib.jpg" alt="">
+    <img src="salma.jpg" alt="">
 </body>
 </html>
